--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel='stylesheet' href='styles.css'>
 </head>
 <body>
+    <header>
+        <img src='https://i.kym-cdn.com/entries/icons/facebook/000/003/047/omg.jpg' 
+        alt='Handsome Squidward'/>
+        <nav>
+            <span>Home</span>
+            <span>About</span>
+            <span>Contact</span>
+        </nav>
+    </header>
     <section>
         <h1>Position Examples</h1>
         <div class='relative'></div>
@@ -15,8 +24,8 @@
         <div class='absolute-parent'>
             <div class='absolute-child'></div>
         </div>
-        <div class='sticky'></div>
     </section>
+    <div class='sticky'></div>
     <h1>Flexbox</h1>
     <section class='flexbox-examples'>
         <div class='flex-child'>1</div>
